# Aegis

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  main.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: audit.py  auth.py  auth_policies.py  permissions.py  portal.py  roles.py  (+5 more)
app/core/: __init__.py  config.py  deps.py  jwt.py  rate_limiter.py  rbac.py  registry.py  security.py  security_config.py  threat_detection.py
app/db/: __init__.py  base.py  session.py
app/db/models/: __init__.py  audit.py  auth_policy.py  ip_ban.py  role.py  route.py  service.py  token.py  user.py  user_role.py
app/gateway/: __init__.py  matcher.py  policy.py  portal_proxy.py  proxy.py  router.py
app/middleware/: request_id.py  security.py
app/schemas/: __init__.py  auth.py  common.py  role.py  route.py  service.py  user.py
app/web/: __init__.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/components/: AppFooter.vue  LanguageSwitcher.vue  NavBar.vue
frontend/src/locales/: en-US.js  index.js  zh-CN.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/utils/: basePath.js
frontend/src/views/: Audit.vue  Dashboard.vue  Login.vue  NotFound.vue  Policies.vue  Roles.vue  Users.vue
static/css/: style.css
static/js/: main.js
templates/: audit.html  base.html  dashboard.html  error.html  login.html  policies.html  portal.html  roles.html  users.html
